[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprite-sheet.svg" type="Texture" id=1]
[ext_resource path="res://Objects/Weapon2D/Weapon2D.gd" type="Script" id=2]
[ext_resource path="res://Objects/Weapon2D/RangePreview/RangePreview.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/Bullets/Bullet.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]
resource_local_to_scene = true
radius = 128.0

[sub_resource type="Animation" id=2]
resource_name = "shoot"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 0.5, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -20, 0 ), Vector2( 0, 0 ) ]
}

[node name="Weapon2D" type="Node2D"]
script = ExtResource( 2 )
bullet_scene = ExtResource( 4 )

[node name="BulletSpawnPosition2D" type="Position2D" parent="."]
position = Vector2( 64, 0 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 40, 0 )
region_enabled = true
region_rect = Rect2( 192, 176, 54, 18 )

[node name="RangeArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="RangeArea2D"]
shape = SubResource( 1 )

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/shoot = SubResource( 2 )

[node name="RangePreview" parent="." instance=ExtResource( 3 )]
